[package]
name = "password-server"
version = "0.1.2"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
iron = "0.6.0"
router = "0.6.0"
logger = "0.4.0"
rust-crypto = "0.2.36"
ring = "0.12.1"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
rand = "0.4.0"
nom = "4.0.0"
